--- a/GroceryStoreManager/GroceryStore.WinUI/GroceryStore.WinUI/MainWindow.xaml
+++ b/GroceryStoreManager/GroceryStore.WinUI/GroceryStore.WinUI/MainWindow.xaml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window
-    x:Class="GroceryStore.WinUI.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GroceryStore.WinUI"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+<Window x:Class="GroceryStore.WinUI.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="using:GroceryStore.WinUI"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:dxg="using:DevExpress.WinUI.Grid"
+        mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <dxg:GridControl ItemsSource="{x:Bind demoVM.Source}"/>
+
 </Window>
