--- a/GroceryStoreManager/GroceryStore.MainApp/Views/ShellPage.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Views/ShellPage.xaml
@@ -1,13 +1,12 @@
-﻿<Page
-    x:Class="GroceryStore.MainApp.Views.ShellPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:helpers="using:GroceryStore.MainApp.Helpers"
-    xmlns:behaviors="using:GroceryStore.MainApp.Behaviors"
-    xmlns:i="using:Microsoft.Xaml.Interactivity"
-    Loaded="OnLoaded">
+﻿<Page x:Class="GroceryStore.MainApp.Views.ShellPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:helpers="using:GroceryStore.MainApp.Helpers"
+      xmlns:behaviors="using:GroceryStore.MainApp.Behaviors"
+      xmlns:i="using:Microsoft.Xaml.Interactivity"
+      Loaded="OnLoaded">
 
     <Grid>
         <Grid x:Name="AppTitleBar"
@@ -23,18 +22,17 @@
                        VerticalAlignment="Center"
                        TextWrapping="NoWrap"
                        Style="{StaticResource CaptionTextBlockStyle}"
-                       Margin="28,0,0,0"/>
+                       Margin="28,0,0,0" />
         </Grid>
-        <NavigationView
-            x:Name="NavigationViewControl"
-            Canvas.ZIndex="0"
-            IsBackButtonVisible="Visible"
-            IsBackEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
-            SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
-            IsSettingsVisible="True"
-            ExpandedModeThresholdWidth="1280"
-            DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
-            Header="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}">
+        <NavigationView x:Name="NavigationViewControl"
+                        Canvas.ZIndex="0"
+                        IsBackButtonVisible="Visible"
+                        IsBackEnabled="{x:Bind ViewModel.IsBackEnabled, Mode=OneWay}"
+                        SelectedItem="{x:Bind ViewModel.Selected, Mode=OneWay}"
+                        IsSettingsVisible="True"
+                        ExpandedModeThresholdWidth="1280"
+                        DisplayModeChanged="NavigationViewControl_DisplayModeChanged"
+                        Header="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}">
             <NavigationView.MenuItems>
                 <!--
                 TODO: Update item titles by updating <x:Uid>.Content entries in Strings/en-us/Resources.resw.
@@ -43,50 +41,59 @@
                 TODO: Update item icons by updating FontIcon.Glyph properties.
                 https://docs.microsoft.com/windows/apps/design/style/segoe-fluent-icons-font#icon-list
                 -->
-                <NavigationViewItem x:Uid="Shell_Dashboard" helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.DashboardViewModel">
+                <NavigationViewItem x:Uid="Shell_Dashboard"
+                                    helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.DashboardViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe7c3;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                  Glyph="&#xe7c3;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="Shell_Order" helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.OrderViewModel">
+                <NavigationViewItem x:Uid="Shell_Order"
+                                    helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.OrderViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe80a;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                  Glyph="&#xe80a;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="Shell_Category" helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.CategoryViewModel">
+                <NavigationViewItem x:Uid="Shell_Category"
+                                    helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.CategoryViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe80a;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                  Glyph="&#xe80a;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="Shell_Product" helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.ProductViewModel">
+                <NavigationViewItem x:Uid="Shell_Product"
+                                    helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.ProductViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xea37;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                  Glyph="&#xea37;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="Shell_Report" helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.ReportViewModel">
+                <NavigationViewItem x:Uid="Shell_Report"
+                                    helpers:NavigationHelper.NavigateTo="GroceryStore.MainApp.ViewModels.ReportViewModel">
                     <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}" Glyph="&#xe7c3;"/>
+                        <FontIcon FontFamily="{StaticResource SymbolThemeFontFamily}"
+                                  Glyph="&#xe7c3;" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
             </NavigationView.MenuItems>
             <NavigationView.HeaderTemplate>
                 <DataTemplate>
                     <Grid>
-                        <TextBlock
-                            Text="{Binding}"
-                            Style="{ThemeResource TitleTextBlockStyle}" />
+                        <TextBlock Text="{Binding}"
+                                   Style="{ThemeResource TitleTextBlockStyle}" />
                     </Grid>
                 </DataTemplate>
             </NavigationView.HeaderTemplate>
             <i:Interaction.Behaviors>
                 <behaviors:NavigationViewHeaderBehavior
-                    DefaultHeader="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}">
+                        DefaultHeader="{x:Bind ((ContentControl)ViewModel.Selected).Content, Mode=OneWay}">
                     <behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
                         <DataTemplate>
                             <Grid>
-                                <TextBlock
-                                    Text="{Binding}"
-                                    Style="{ThemeResource TitleTextBlockStyle}" />
+                                <!--Where the header text came from-->
+                                <TextBlock Text="{Binding}"
+                                           Style="{ThemeResource TitleTextBlockStyle}" />
                             </Grid>
                         </DataTemplate>
                     </behaviors:NavigationViewHeaderBehavior.DefaultHeaderTemplate>
