Add window service

--- a/GroceryStoreManager/GroceryStore.MainApp/Views/PopupView/OrderPopup.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Views/PopupView/OrderPopup.xaml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page x:Class="GroceryStore.MainApp.Views.SubWindowView.OrderForm"
+<Page x:Class="GroceryStore.MainApp.Views.PopupView.OrderPopup"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:GroceryStore.MainApp.Views.SubWindowView"
+      xmlns:local="using:GroceryStore.MainApp.Views.PopupView"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:dxe="using:DevExpress.WinUI.Editors"
       mc:Ignorable="d"
       Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-      xmlns:dxe="using:DevExpress.WinUI.Editors"
-      x:DefaultBindMode="OneWay">
+      MinWidth="500"
+      MinHeight="700">
 
     <ScrollViewer HorizontalScrollBarVisibility="Auto"
                   HorizontalScrollMode="Auto">
@@ -19,6 +20,7 @@
             </Grid.RowDefinitions>
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
