--- a/GroceryStoreManager/GroceryStore.MainApp/App.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/App.xaml
@@ -10,6 +10,7 @@
                 <ResourceDictionary Source="/Styles/Thickness.xaml" />
                 <ResourceDictionary Source="/Styles/TextBlock.xaml" />
                 <ResourceDictionary Source="/Styles/Controls.xaml" />
+                <ResourceDictionary Source="/Converters/Converters.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
         </ResourceDictionary>
