--- a/GroceryStoreManager/GroceryStore.MainApp/Views/PopupView/OrderPopup.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Views/PopupView/OrderPopup.xaml
@@ -7,15 +7,19 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:dxe="using:DevExpress.WinUI.Editors"
       xmlns:tkcontrols="using:CommunityToolkit.WinUI.UI.Controls"
+      xmlns:model="using:GroceryStore.Domain.Model"
+      xmlns:helper="using:GroceryStore.MainApp.ControlHelper"
       mc:Ignorable="d"
       Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-      MinWidth="500"
-      MinHeight="700"
-      x:DefaultBindMode="TwoWay"
+      Width="945"
+      x:DefaultBindMode="OneWay"
       Name="root">
 
     <ScrollViewer HorizontalScrollBarVisibility="Auto"
-                  HorizontalScrollMode="Auto">
+                  HorizontalScrollMode="Auto"
+                  IsTabStop="True"
+                  Margin="30 40"
+                  Name="subroot">
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
@@ -28,90 +32,236 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
-                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
-                <ComboBox Grid.Row="0"
-                          IsTextSearchEnabled="True"
-                          Header="Select Customer: "
-                          ItemsSource="{x:Bind ViewModel.AvailbleCustomer, Mode=OneWay}"
-                          SelectedItem="{x:Bind ViewModel.SelectedCustomer, Mode=TwoWay}" />
 
-                <Grid>
+                <!--The auto focus when click on blank space problem: https://stackoverflow.com/questions/49917853/why-is-textbox-is-always-geting-focus-when-i-click-the-blank-area-of-the-page-->
+
+                <!--Details Section === START-->
+                <Grid Grid.Row="0"
+                      BorderThickness="1"
+                      Padding="10"
+                      Margin="0 10"
+                      BorderBrush="{StaticResource SystemBaseMediumLowColor}"
+                      MaxWidth="{Binding ElementName=subroot, Path=ActualWidth}">
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto" />
-                        <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="auto" />
                     </Grid.ColumnDefinitions>
 
-                    <ComboBox Grid.Row="0"
-                              Grid.Column="0"
-                              IsTextSearchEnabled="True"
-                              Header="Select Product: "
-                              ItemsSource="{x:Bind ViewModel.AvailbleProduct}"
-                              SelectedItem="{x:Bind ViewModel.SelectedProduct}" />
-                    <dxe:SpinEdit Grid.Row="0"
-                                  Grid.Column="1"
+                    <AutoSuggestBox Grid.Row="0"
+                                    Grid.Column="0"
+                                    Grid.ColumnSpan="2"
+                                    x:Name="ProductASB"
+                                    Margin="10"
+                                    Header="Select Product:"
+                                    PlaceholderText="Choose a Product"
+                                    QueryIcon="ViewAll">
+                        <AutoSuggestBox.ItemTemplate>
+                            <DataTemplate x:DataType="model:Product">
+                                <!--NO COMMA WHEN BINDING IS EMPTY (SELF BIND)-->
+                                <!--NO COMMA WHEN BINDING IS EMPTY (SELF BIND)-->
+                                <!--NO COMMA WHEN BINDING IS EMPTY (SELF BIND)-->
+                                <TextBlock Text="{Binding Converter={StaticResource ASBProductDisplayStringFormat}}" />
+                            </DataTemplate>
+                        </AutoSuggestBox.ItemTemplate>
+                    </AutoSuggestBox>
+
+                    <dxe:SpinEdit Grid.Row="1"
+                                  Grid.Column="0"
+                                  Margin="10"
                                   Header="Quantity:"
-                                  EditValue="{x:Bind ViewModel.Quantity}"
-                                  MinValue="0">
+                                  HorizontalAlignment="Stretch"
+                                  EditValue="{x:Bind ViewModel.Quantity, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                  MinValue="1">
                         <dxe:SpinEdit.TextInputSettings>
                             <dxe:TextInputMaskSettings MaskType="Numeric"
                                                        Mask="n0" />
                         </dxe:SpinEdit.TextInputSettings>
                     </dxe:SpinEdit>
-                    <Button  Grid.Row="0"
-                             Grid.Column="2"
-                             Content="Add to Order"
-                             Command="{x:Bind ViewModel.AddToOrderCommand}" />
 
-                    <tkcontrols:DataGrid>
-                        <tkcontrols:DataGrid.Columns>
-                            <tkcontrols:DataGridTextColumn>
+                    <Button Grid.Row="1"
+                            Grid.Column="1"
+                            Margin="10"
+                            Content="Add to Order"
+                            HorizontalAlignment="Right"
+                            VerticalAlignment="Bottom"
+                            Style="{StaticResource AccentButtonStyle}"
+                            Command="{x:Bind ViewModel.AddToOrderCommand}" />
 
-                            </tkcontrols:DataGridTextColumn>
-                            <tkcontrols:DataGridTemplateColumn Header="Delete">
-                                <tkcontrols:DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <Button Content="Delete"
-                                                Command="{Binding Path=ViewModel.DetailsDelete, ElementName=root}"
-                                                CommandParameter="{x:Bind}" />
-                                    </DataTemplate>
-                                </tkcontrols:DataGridTemplateColumn.CellTemplate>
-                            </tkcontrols:DataGridTemplateColumn>
-                        </tkcontrols:DataGrid.Columns>
-                    </tkcontrols:DataGrid>
+                    <ScrollViewer Grid.Row="2"
+                                  Grid.ColumnSpan="2"
+                                  Margin="10"
+                                  HorizontalAlignment="Center"
+                                  HorizontalScrollMode="Auto"
+                                  HorizontalScrollBarVisibility="Auto"
+                                  MaxWidth="{Binding ElementName=subroot, Path=ActualWidth}"
+                                  MaxHeight="150">
+                        <tkcontrols:DataGrid ItemsSource="{x:Bind ViewModel.Details}"
+                                             AutoGenerateColumns="False"
+                                             HorizontalAlignment="Stretch"
+                                             Width="{Binding ElementName=ProductASB, Path=ActualWidth}"
+                                             IsReadOnly="True"
+                                             IsTabStop="False"
+                                             AllowFocusOnInteraction="False">
+                            <tkcontrols:DataGrid.Columns>
+                                <tkcontrols:DataGridTextColumn Header="Product"
+                                                               Binding="{Binding Path=Product.Name}"
+                                                               Width="5*">
+                                    <tkcontrols:DataGridTextColumn.ElementStyle>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="TextWrapping"
+                                                    Value="Wrap" />
+                                        </Style>
+                                    </tkcontrols:DataGridTextColumn.ElementStyle>
+                                </tkcontrols:DataGridTextColumn>
+                                <tkcontrols:DataGridTextColumn Header="Type"
+                                                               Binding="{Binding Path=Product.Type.Name}"
+                                                               Width="2*" />
+                                <tkcontrols:DataGridTextColumn Header="Quantity"
+                                                               Binding="{Binding Path=Quantity}"
+                                                               Width="auto" />
+                                <tkcontrols:DataGridTextColumn Header="Price"
+                                                               Binding="{Binding Path=Product.Price, Converter={StaticResource CurrencyVNDConverter}}"
+                                                               Width="auto" />
+                                <tkcontrols:DataGridTemplateColumn Header="Delete"
+                                                                   IsReadOnly="True"
+                                                                   Width="auto">
+                                    <tkcontrols:DataGridTemplateColumn.CellTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <TextBlock x:Name="proxy"
+                                                           helper:AncestorSource.AncestorType="Page" />
+                                                <Button IsTabStop="False"
+                                                        AllowFocusOnInteraction="False"
+                                                        CornerRadius="3"
+                                                        Width="{Binding RelativeSource={RelativeSource Mode=Self}, Path=Height}"
+                                                        Command="{Binding Path=DataContext.ViewModel.DeleteFromOrderCommand, ElementName=proxy}"
+                                                        CommandParameter="{Binding}">
+                                                    <FontIcon Glyph="&#xE711;" />
+                                                </Button>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </tkcontrols:DataGridTemplateColumn.CellTemplate>
+                                </tkcontrols:DataGridTemplateColumn>
+                            </tkcontrols:DataGrid.Columns>
+                        </tkcontrols:DataGrid>
+                    </ScrollViewer>
                 </Grid>
+                <!--Details Section === End-->
+
+                <!--Coupon Section === Start-->
+                <Grid Margin="0 10"
+                      Grid.Row="1"
+                      Padding="10"
+                      BorderThickness="1"
+                      BorderBrush="{StaticResource SystemBaseMediumLowColor}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+
+                    <AutoSuggestBox Grid.Row="0"
+                                    Grid.ColumnSpan="3"
+                                    x:Name="CustomerASB"
+                                    Header="Select Customer:"
+                                    Margin="10"
+                                    PlaceholderText="Choose a Customer"
+                                    QueryIcon="People">
+                        <AutoSuggestBox.ItemTemplate>
+                            <DataTemplate x:DataType="model:Customer">
+                                <!--NO COMMA WHEN BINDING IS EMPTY (SELF BIND)-->
+                                <!--NO COMMA WHEN BINDING IS EMPTY (SELF BIND)-->
+                                <!--NO COMMA WHEN BINDING IS EMPTY (SELF BIND)-->
+                                <TextBlock Text="{Binding Converter={StaticResource ASBCustomerDisplayStringFormat}}" />
+                            </DataTemplate>
+                        </AutoSuggestBox.ItemTemplate>
+                    </AutoSuggestBox>
+
+                    <dxe:SpinEdit Grid.Row="1"
+                                  Grid.Column="0"
+                                  Header="Coupon used:"
+                                  Margin="10"
+                                  MinValue="0"
+                                  MaxValue="{x:Bind ViewModel.CouponCustomerHas}"
+                                  EditValue="{x:Bind ViewModel.CouponUsed, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                  IsEnabled="{x:Bind ViewModel.HasCustomer}"
+                                  IsEnabledChanged="CouponIsEnabledChanged">
+                        <dxe:SpinEdit.TextInputSettings>
+                            <dxe:TextInputMaskSettings MaskType="Numeric"
+                                                       Mask="n0" />
+                        </dxe:SpinEdit.TextInputSettings>
+                    </dxe:SpinEdit>
+
+                    <dxe:TextEdit Grid.Row="1"
+                                  Grid.Column="1"
+                                  Header="Coupon has:"
+                                  Margin="10"
+                                  IsReadOnly="True"
+                                  EditValue="{x:Bind ViewModel.CouponCustomerHas}"
+                                  IsEnabled="{x:Bind ViewModel.HasCustomer}"
+                                  IsEnabledChanged="CouponIsEnabledChanged">
+                        <dxe:TextEdit.TextInputSettings>
+                            <dxe:TextInputMaskSettings Mask="n0"
+                                                       MaskType="Numeric" />
+                        </dxe:TextEdit.TextInputSettings>
+                    </dxe:TextEdit>
+
+                    <dxe:TextEdit Grid.Row="1"
+                                  Grid.Column="2"
+                                  Header="Current Coupon Value: "
+                                  Margin="10"
+                                  EditValue="{x:Bind ViewModel.CurrentCouponValue, Mode=OneTime, Converter={StaticResource CurrencyVNDConverter}}"
+                                  IsReadOnly="True">
+                    </dxe:TextEdit>
+                </Grid>
+                <!--Coupon Section === End-->
 
                 <dxe:DateEdit Grid.Row="2"
                               Header="Order date:"
+                              Margin="20 10"
                               NullValue="Enter a date"
                               EditValue="{x:Bind ViewModel.OrderDate}"
-                              MaxValue="{x:Bind DateTimeNow}" />
+                              MaxValue="{x:Bind ViewModel.DateTimeNow, Mode=OneTime}" />
 
-                <dxe:SpinEdit Grid.Row="4"
-                              IsEnabled="{x:Bind ViewModel.HasCustomer}"
-                              Header="Coupon used:"
-                              EditValue="{x:Bind ViewModel.CouponUsed}"
-                              MinValue="0"
-                              MaxValue="{x:Bind ViewModel.SelectedCustomer.Coupons.Count, Mode=OneWay}">
-                    <dxe:SpinEdit.TextInputSettings>
-                        <dxe:TextInputMaskSettings MaskType="Numeric"
-                                                   Mask="n0" />
-                    </dxe:SpinEdit.TextInputSettings>
-                </dxe:SpinEdit>
-                <dxe:TextEdit Grid.Row="5"
-                              Header="Total Price"
-                              EditValue="125000"
+                <dxe:TextEdit Grid.Row="3"
+                              Header="Total Price:"
+                              Margin="20 10"
+                              EditValue="{x:Bind ViewModel.TotalPrice, Mode=OneWay, Converter={StaticResource CurrencyVNDConverter}}"
                               IsReadOnly="True">
-                    <dxe:TextEdit.TextInputSettings>
-                        <dxe:TextInputMaskSettings Mask="c0"
-                                                   MaskType="Numeric" />
-                    </dxe:TextEdit.TextInputSettings>
                 </dxe:TextEdit>
+            </Grid>
+
+            <Grid Grid.Row="1"
+                  Margin="0 40 0 0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0"
+                        Style="{StaticResource DefaultButtonStyle}"
+                        HorizontalAlignment="Stretch"
+                        Content="Cancel"
+                        Margin="20 10 10 10"
+                        Padding="0 10"
+                        Command="{x:Bind ViewModel.DeclineCommand}" />
+                <Button Grid.Column="1"
+                        Style="{StaticResource AccentButtonStyle}"
+                        HorizontalAlignment="Stretch"
+                        Content="Confirm"
+                        Margin="10 10 20 10"
+                        Padding="0 10"
+                        Command="{x:Bind ViewModel.AcceptCommand}" />
             </Grid>
         </Grid>
     </ScrollViewer>
