--- a/GroceryStoreManager/GroceryStore.MainApp/Converters/Converters.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Converters/Converters.xaml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:GroceryStore.MainApp.Converters">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="using:GroceryStore.MainApp.Converters">
 
     <local:DummyConverter x:Key="DummyConverter" />
 
@@ -10,5 +9,6 @@
     <local:ASBProductDisplayStringFormat x:Key="ASBProductDisplayStringFormat" />
 
     <local:CurrencyVNDConverter x:Key="CurrencyVNDConverter" />
+    <local:BoolToVisibility x:Key="BoolToVisibility" />
 
 </ResourceDictionary>
