--- a/GroceryStoreManager/GroceryStore.MainApp/Views/OrderPage.xaml
+++ b/GroceryStoreManager/GroceryStore.MainApp/Views/OrderPage.xaml
@@ -146,7 +146,10 @@
             <!--CONTENT-->
 
             <dxg:GridControl ItemsSource="{x:Bind ViewModel.Source, Mode=OneWay}"
-                             AutoGenerateColumns="False">
+                             SelectedItem="{x:Bind ViewModel.SelectedOrder, Mode=TwoWay}"
+                             NavigationStyle="Row"
+                             AutoGenerateColumns="False"
+                             x:Name="Test">
                 <dxg:GridControl.Columns>
                     <dxg:GridTextColumn Header="Order ID"
                                         FieldName="Id"
